Ajout de require pour le nombre à choisir

--- a/nombre.html
+++ b/nombre.html
@@ -9,7 +9,7 @@
     <form name="Choose a number" method="GET" action="/multiplication3.php">
         <label>
             Saisissez un nombre entier en base 10
-            <input name="n" type="number" min="0" step="1"><br>
+            <input name="n" type="number" min="0" step="1" required><br>
         </label>
         <label>
             <input name="submit" type="submit" value="Calculer la table de multiplication !">
