prise en compte de l'url dans http-multiplication3.md et modification de nombre.html pour ne pas avoir le retour du submit

--- a/nombre.html
+++ b/nombre.html
@@ -12,7 +12,7 @@
             <input name="n" type="number" min="0" step="1" required><br>
         </label>
         <label>
-            <input name="submit" type="submit" value="Calculer la table de multiplication !">
+            <input type="submit" value="Calculer la table de multiplication !">
         </label>
     </form>
 </body>
