--- a/nombre.html
+++ b/nombre.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="nombre.css">
     <title>Génération d'une table de multiplication</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
     <form name="Choose a number" method="GET" action="/multiplication3.php">
         <label>
             Saisissez un nombre entier en base 10
-            <input name="n" type="number" min="0" step="1" required><br>
+            <input name="n" type="number" min="0" step="1" required>
         </label>
         <label>
             <input type="submit" value="Calculer la table de multiplication !">
